# Projeto-Rio-Amazonas

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  start-backend.ps1  start-frontend.ps1  test-endpoints.ps1
backend/: api.py  server.py
backend/data/: fallback.json
backend/src/: ana_hidrowebservice.py  api.py  config.py  main.py  processamento.py  utils.py
frontend/: index.html  package.json
frontend/public/: dashboard.html  teste.html
frontend/src/: App.css  App.jsx
tests/: README_TESTES.md  test_api.py
