[project]
name = "projeto-rio-amazonas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "requests>=2.33.0",
    "streamlit>=1.19.0",
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
]
